[tool.poetry]
name = "texasholdem"
version = "0.6.4"
description = "A texasholdem python package"
authors = ["Evyn Machi <evyn.machi@gmail.com>"]
keywords = ['texasholdem', 'holdem', 'poker']
readme = "README.md"
license = "MIT"
homepage = "https://github.com/SirRender00/texasholdem"
repository = "https://github.com/SirRender00/texasholdem"

include = [
    "texasholdem",
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-parallel = "^0.1.1"
pylint = "^2.11.1"
sphinx-rtd-theme = "^1.0.0"

[tool.pylint.master]
ignore = ["keyboard.py", "text_gui.py"]
disable = ["import-error", "missing-module-docstring"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
