[metadata]
name = texasholdem
version = 0.1.1
author = Evyn Machi
author_email = evyn.machi@gmail.com
description = A Python package for the game of TexasHoldEm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SirRender00/texasholdem
project_urls =
    Bug Tracker = https://github.com/SirRender00/texasholdem/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = texasholdem
python_requires = >=3.9
